--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -5,7 +5,7 @@ $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
 $beta: #222
-$gama: #aaa
+$gama: #6b6b6b
 $delta: #4b0082
 $epsilon: #ededed
 $prose: #4f4b45
