--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -36,6 +36,8 @@
         display: block
         padding: 18px 0
         text-decoration: none
+        border-radius: 10px
+        transition: background-color .2s ease, color .2s ease
 
     > .item > .url > .title
         margin: 0
@@ -55,6 +57,13 @@
             font-size: 3rem
 
     > .item:hover > .url > .title
+        color: $delta
+
+    > .item:hover > .url,
+    > .item:focus-within > .url
+        background: rgba($delta, 0.035)
+
+    > .item:focus-within > .url > .title
         color: $delta
 
     // maybe we can't nest html5 elements
@@ -84,6 +93,9 @@
             font-size: 1.05rem
 
     .item:hover .url aside
+        color: $alpha
+
+    .item:focus-within .url aside
         color: $alpha
 
 .projects > .list > .item > .url
